center align fix

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -466,6 +466,9 @@ font-size:28px;
 
 .feature-section{
 flex-direction:column;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 .portfolio-header h2{
